# mirrordash-homeassistant

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
mirrordash_homeassistant/: config_schema.json  plugin.py
mirrordash_homeassistant/templates/: widget.html
mirrordash_homeassistant/translations/: en.json  sv.json
tests/: test_homeassistant.py
