[project]
name = "mirrordash-homeassistant"
version = "0.1.0"
description = "Fetches and displays states from a local Home Assistant system."
authors = [
    { name = "MirrorDash Developer" }
]
dependencies = [
    "jinja2"
]

[project.entry-points."mirrordash.modules"]
mirrordash_homeassistant = "mirrordash_homeassistant.plugin:HomeassistantModule"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mirrordash_homeassistant"]
